# Istari

./: .gitignore  CMakeLists.txt  istari_exprot.bat  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.rc  resourses.qrc  version.h.in
AppParams/: appparams.cpp  appparams.h  criptpass.cpp  criptpass.h  databaseconfig.cpp  databaseconfig.h  dbsettingsdialog.cpp  dbsettingsdialog.ui
DatabseDialog/: codeeditor.cpp  codeeditor.h  databsedialog.cpp  databsedialog.h  databsedialog.ui  linenumberarea.cpp  linenumberarea.h  mdisubwindow.cpp  mdisubwindow.h  sqleditorform.cpp  sqleditorform.h  sqleditorform.ui  sqlsyntaxhighlighter.cpp  sqlsyntaxhighlighter.h  tableform.cpp  tableform.h  tableform.ui  treefilterproxymodel.cpp  treefilterproxymodel.h
SQL/: istari.sql
